updated file path

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,7 +9,7 @@
     "import json\n",
     "import numpy as np\n",
     "from layers.datasets import LayersReader\n",
-    "\n",
+    "from layers.datasets.utils.io import readJSON, readPKL, writePKL\n",
     "# For visualization\n",
     "from layers.utils import MeshViewer, select_verts_faces"
    ]
@@ -21,10 +21,10 @@
    "outputs": [],
    "source": [
     "# Variables\n",
-    "data_root = 'data/demo'\n",
-    "smpl_dir = 'data/smpl'\n",
-    "sample = '00396'\n",
-    "frame = 3\n",
+    "data_root = '/data2/D-Layers/D-LAYERS___D-LAYERS'\n",
+    "smpl_dir = '/data2/D-Layers/D-LAYERS___D-LAYERS/data/smpl/model'\n",
+    "sample = '00346'\n",
+    "frame = 30\n",
     "\n",
     "layers_reader = LayersReader(data_root, smpl_dir)\n",
     "# For visualization\n",
@@ -39,6 +39,27 @@
    "source": [
     "infos = layers_reader.read_info(sample)\n",
     "print(json.dumps(infos, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dress_sleeveless = readPKL(f\"{data_root}/data/00346/dress_sleeveless.pkl\")\n",
+    "dress_sleeveless['tpose'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read human motion\n",
+    "human_pose = readPKL(f\"{data_root}/human/77/77_04_poses.pkl\")\n",
+    "human_pose"
    ]
   },
   {
@@ -131,9 +152,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.4"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
