fixed aspect ratio for human mesh viewer

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "import numpy as np\n",
     "from layers.datasets import LayersReader\n",
@@ -38,7 +48,7 @@
    "outputs": [],
    "source": [
     "infos = layers_reader.read_info(sample)\n",
-    "print(json.dumps(infos, indent=4))"
+    "# print(json.dumps(infos, indent=4))"
    ]
   },
   {
@@ -58,8 +68,7 @@
    "outputs": [],
    "source": [
     "# read human motion\n",
-    "human_pose = readPKL(f\"{data_root}/human/77/77_04_poses.pkl\")\n",
-    "human_pose"
+    "human_pose = readPKL(f\"{data_root}/human/77/77_04_poses.pkl\")"
    ]
   },
   {
@@ -90,7 +99,7 @@
     "    g_Ts.append(T)\n",
     "    g_Fs.append(g_F)\n",
     "m_viewer.add_mesh(h_V, h_F)\n",
-    "m_viewer.show()"
+    "m_viewer.show(set_layout=True)"
    ]
   },
   {
@@ -104,7 +113,7 @@
     "m_viewer.add_mesh(h_V_rest, h_F)\n",
     "for T, F in zip(g_Ts, g_Fs):\n",
     "    m_viewer.add_mesh(T, F)\n",
-    "m_viewer.show()"
+    "m_viewer.show(set_layout=True)"
    ]
   },
   {
