--- a/smpl_body.ipynb
+++ b/smpl_body.ipynb
@@ -18,7 +18,9 @@
    "source": [
     "import pickle\n",
     "from layers.datasets.smpl.smpl_np import SMPLModel, NUM_SMPL_JOINTS\n",
-    "from layers.utils import MeshViewer, select_verts_faces"
+    "from layers.utils import MeshViewer, select_verts_faces\n",
+    "import plotly.graph_objects as go\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,44 +49,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# beta = np.array([10.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]) # big thigh, short legs\n",
+    "# beta = np.array([0.0, 10.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]) # look like skeleton\n",
+    "# beta = np.array([0.0, 0.0, 20.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]) # pregnant looking\n",
+    "# beta = np.array([0.0, 0.0, 0.0, 20.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]) # short legs\n",
+    "\n",
+    "\n",
+    "beta = 3 * np.random.randn(10)\n",
+    "_, V, root_offset = human_model.set_params(beta=beta, with_body=True)\n",
+    "beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m_viewer = MeshViewer()\n",
     "m_viewer.add_mesh(V, F)\n",
-    "m_viewer.show(set_layout=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "fig = go.Figure(data=[go.Mesh3d(x=V[:,0],\n",
-    "            y=V[:,1],\n",
-    "            z=V[:,2],\n",
-    "            i = F[:,0],\n",
-    "            j = F[:,1],\n",
-    "            k = F[:,2],\n",
-    "color='lightpink', opacity=1.0, showscale=False)], layout=layout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig"
+    "m_viewer.show()"
    ]
   },
   {
